# TurtlebotLibrary

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cpp/: CMakeLists.txt
cpp/example/: CMakeLists.txt  OnWisconsin.cpp  TurtlebotTester.cpp
cpp/include/: Serial.hpp  TurtlebotCommandSender.hpp  TurtlebotLibrary.hpp  TurtlebotMessage.hpp
cpp/include/msg/: Actuator.hpp  Mode.hpp  PlayScript.hpp  Script.hpp  Sensor.hpp  Start.hpp
cpp/src/: CMakeLists.txt  Serial.cpp  TurtlebotCommandSender.cpp  TurtlebotMessage.cpp
cpp/src/msg/: DigitalOutputs.cpp  Drive.cpp  PlayScript.cpp  Script.cpp  Sensor.cpp
csharp/TurtlebotLibrary/: TurtlebotLibrary.sln
csharp/TurtlebotLibrary/TurtlebotLibrary/: Actuator.hpp  DigitalOutputs.cpp  Drive.cpp  Mode.hpp  Note.hpp  PlayScript.cpp  PlayScript.hpp  PlaySong.cpp  Script.cpp  Script.hpp  Sensor.cpp  Sensor.hpp  Song.cpp  Start.hpp  TurtlebotCommandSender.cpp  TurtlebotCommandSender.hpp  TurtlebotLibrary.vcxproj  TurtlebotLibrary.vcxproj.filters  TurtlebotMessage.cpp  TurtlebotMessage.hpp  Wait.cpp  Wait.hpp
csharp/TurtlebotLibrary/TurtlebotLibraryNative/: Script.cpp  TurtlebotLibraryNative.vcxproj  TurtlebotLibraryNative.vcxproj.filters
csharp/TurtlebotLibrary/TurtlebotLibrarySharpTester/: Program.cs  TurtlebotLibrarySharpTester.csproj
csharp/TurtlebotLibrary/TurtlebotLibrarySharpTester/Properties/: AssemblyInfo.cs
example/: CMakeLists.txt  TurtlebotTester.cpp  on_wisconsin_notes.txt
include/: Note.hpp  Serial.hpp  TurtlebotCommandSender.hpp  TurtlebotLibrary.hpp  TurtlebotMessage.hpp  bprintf.h
include/msg/: Actuator.hpp  Mode.hpp  Sensor.hpp  Start.hpp  Wait.hpp
src/: CMakeLists.txt  Note.cpp  Serial.cpp  TurtlebotCommandSender.cpp  TurtlebotMessage.cpp  bprintf.c
src/msg/: DigitalOutputs.cpp  Drive.cpp  PlaySong.cpp  Sensor.cpp  Song.cpp
